Time-series index spec conversion does not check element type for 2dsphere check

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: 6.0.0, 7.0.0, 8.0.0
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-10-28
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When converting a user-facing time-series index spec into a spec on the buckets collection, one of the checks is whether it is a 2dsphere index. This check uses BSONElement::valueStringData which assumes that the element is a string. However, at this point we have not checked the element's type and so it may not actually be a string.

            Assignee:
            Binh Vo
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: