SERVER-95745 Guard string checks for BSON index specs (#28302)

GitOrigin-RevId: 7ac175f7e7e3f6e5666ee0f0f2cb6ce27d16dbb5